2005-05-21  Roland Illig  <roland.illig@gmx.de>

	* view.c: Made the F2 key action much simpler---now it just
	toggles between hexview and hexedit mode. Switching between text
	and hex mode can be done with <tab>, as before.
	* view.c: Renamed dpy_text_start to dpy_topleft, as it does not
	only apply to text mode. Renamed dpy_text_start_col to
	dpy_text_column.

2005-05-20  Pavel Roskin  <proski@gnu.org>

	* find.c: Fix warnings reported by gcc 4.0.0.
	* mountlist.c: Likewise.
	* screen.c: Likewise.
	* view.c: Likewise.

	* dialog.c (dlg_select_widget): Remove first argument, it's
	redundant.  Adjust all callers.
	(dlg_replace_widget): Likewise.

2005-05-11  Roland Illig  <roland.illig@gmx.de>

	* charsets.c (translate_character): Fixed checking of the return
	value of iconv().

2005-05-10  Pavel Roskin  <proski@gnu.org>

	* .c: Sanitize all calls to functions from ctype.h.  Fix gcc 4.0
	warnings.

	* file.c: Remove unneeded WANT_WIDGETS.
	* layout.c: Likewise.
	* setup.c: Likewise.
	* view.c: Likewise.

2005-05-10  Roland Illig  <roland.illig@gmx.de>

	* find.c (find_parameters): Moved around and reordered dialog
	items to make their meaning clearer.

2005-04-03  Pavel Roskin  <proski@gnu.org>

	* screen.c (try_to_select): Don't call display_mini_info(), it
	will be called later because select_item sets panel->dirty.
	This fixes the mini status appearing first after Ctrl-O.

2005-04-27  Roland Illig  <roland.illig@gmx.de>

	* view.c: Changed use of view->text_wrap_mode to reflect its
	type, being gboolean. That is, only use boolean operators and
	TRUE/FALSE for assignment. Bug reported by Jindrich Makovicka.

2005-04-26  Roland Illig  <roland.illig@gmx.de>

	* view.c: Added some calls to str_unconst() to get rid of the
	GCC warnings.
	* global.h: Define NDEBUG (used by assert() depending on
	MC_ENABLE_DEBUGGING_CODE).

2005-04-25  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_move_forward2): Fixed a bug related to the return